* all the missing stuff has to be added here ...

2009-02-16  Niels Fröhling  <info@frohling.biz>

	* Migration of new TV-patches since 2008-12-26

2009-02-14  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10446: Migration Wizzard references in just one DS_Column (typo, colpos should be colPos)
	* Fixed bug #10030: defined templatePath allows only one path
	This allows using a commalist with "mod.web_txtemplavoilaM2.templatePath" to allow more than one path. The value gets a new default (set to "templates", was empty before). Doc change required.
	* Fixed bug #10255: Use t3lib::fixed_lgd_cs instead of t3lib::fixed_lgd
 	* Fixed bug #10280: TEXT doesn't allow NOT NULL with Strict-mode
	* Fixed bug #10026: beautify Template filelist
	* Fixed bug #10436: Select Storage Folders - table is too small with more places

2009-02-06  Dmitry Dulepov  <dmitry@typo3.org>

 	* Fixed bug #10361: Remove translations from locallang files
	* Fixed bug #10108: Replace t3lib_div::GPvar with t3lib_div::_GP
 	* Fixed bug #10362: t3lib_div::implodeParams is deprecated
	* Implementation of #10370: added initial work on new CE wizard

2009-01-27  Kasper SkŒrh¿j	<kasper@typo3.org>

	* Fixed a bug in the cleaner of unused elements which ignored some translations of content elements.
	* Added cleaner option --excludePageIdList allowing to exclude certain pages.
	* Added that language icon in Page module gets dimmed when no translation exists.

2009-01-26  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed possible bug with "argument #1 is not an array"

2008-12-26  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed ext_php_api.dat
	* Fixed bug #10020: Allow DS and TOs outside of GRSP

2008-12-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Require PHP 5.1 from now on
	* Fixed bug #9985: Simplify template object selection for pages and FCE

2008-12-12	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9564: Update PHP dependencies